relatorio html atualizado

--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>Trabalho Prático de Redes de Computadores II - Turma 2010/1</TITLE>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 </HEAD><BODY BGCOLOR="white" TEXT="black">
 
 <p class="western" align="center" style="margin-bottom: 0cm"><strong><span style="background: transparent">Universidade
@@ -223,7 +224,7 @@ cohiba.c3sl.ufpr.br 50000</span></p>
 caporal.c3sl.ufpr.br 50000</span></p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal"><span style="background: transparent">4
 salinas.c3sl.ufpr.br 50000</span></p>
-<p class="western" style="margin-bottom: 0cm">&nbsp;</p>
+<p class="western" style="margin-bottom: 0cm"><a href="mcast.log.txt">Log mcast</a></p>
 <p class="western" style="margin-bottom: 0cm"><strong><span style="background: transparent">Cliente</span></strong></p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal"><span style="background: transparent">$
 ./client.py </span></p>
@@ -238,7 +239,7 @@ para sair. </span></p>
 40.5/8 </span></p>
 <p class="western" style="margin-bottom: 0cm"><span style="background: transparent"><span style="font-weight: normal">Sem
 resposta (timeout estourou)<br />
-<br /></span><strong>Servidor 1</strong></span></p>
+<br /></span><strong>Servidor 1</strong></span>  (<a href="server1.log.txt">log completo</a>)</p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal"><span style="background: transparent">$
 ./server.py 1 serverlist.txt</span></p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal"><span style="background: transparent">May
@@ -267,7 +268,7 @@ Server1 (50000, 'macalan.c3sl.ufpr.br'): 44.5 </span></p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal"><span style="background: transparent">…</span></p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal">&nbsp;</p>
 <p class="western" style="margin-bottom: 0cm"><strong><span style="background: transparent">Servidor
-2</span></strong></p>
+2</span></strong>  (<a href="server2.log.txt">log completo</a>)</p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal"><span style="background: transparent">$
 ./server.py 2 serverlist.txt</span></p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal"><span style="background: transparent">May
@@ -305,7 +306,7 @@ Server1 (50000, 'macalan.c3sl.ufpr.br'): 44.5 </span></p>
 30 105933 2010: Server-2 Morto </span></p>
 <p class="western" style="margin-bottom: 0cm; font-weight: normal">&nbsp;</p>
 <p class="western" style="margin-bottom: 0cm"><span style="background: transparent"><strong>Servidor
-4</strong><span style="font-weight: normal"><br />
+4</strong>  (<a href="server4.log.txt">log completo</a>)<span style="font-weight: normal"><br />
 $ ./server.py 4
 serverlist.txt</span></span></p>
 <p class="western" style="margin-bottom: 0cm"><span style="background: transparent"><span style="font-weight: normal">May
